<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="end"
    android:layoutDirection="rtl"
    android:layout_gravity="end">

    <item
        android:id="@+id/userName"
        android:icon="@mipmap/logout"
        android:orderInCategory="100"
        android:title=""
        android:gravity="end"
        android:layout_gravity="end"
        app:showAsAction="never" />
    <item
        android:id="@+id/logout"
        android:icon="@mipmap/logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        android:gravity="end"
        android:layout_gravity="end"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_filter"
        android:icon="@mipmap/filter"
        app:showAsAction="always"
        android:title="@string/filter"/>
    <item
        android:id="@+id/action_search"
        app:showAsAction="always"
        android:icon="@mipmap/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:title="@string/search"/>

</menu>

