<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@drawable/background"
    tools:context="com.example.tasks.committee10_2018.view.LoginActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_view"
    android:layout_gravity="center_vertical"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="16dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/logo" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/shortlogo" />

                <TextView
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textColor="@color/colorPrimaryDark"
                    android:fontFamily="@font/jozoor_font"
                    android:text="@string/email"/>

                <EditText
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:id="@+id/user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:gravity="right|center"
                    android:fontFamily="@font/roboto_medium"
                    android:drawableLeft="@mipmap/user"
                    />

                <TextView
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textColor="@color/colorPrimaryDark"
                    android:fontFamily="@font/jozoor_font"
                    android:text="@string/password"
                    android:layout_marginTop="8dp"/>

                <EditText
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:id="@+id/pass"
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:gravity="right|center"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:drawableLeft="@mipmap/key" />

                <Button
                    android:id="@+id/button"
                    android:background="@drawable/button"
                    android:textColor="@android:color/white"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/jozoor_font"
                    android:layout_marginTop="24dp"
                    android:text="@string/login" />

        </LinearLayout>


</ScrollView>

        <TextView
            android:id="@+id/noInternetConnection"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textAlignment="gravity"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/jozoor_font"
            android:text="لا يوجد اتصال بالانترنت برجاء الاتصال واعادة محاولة الدخول..." />
        </LinearLayout>